--- a/style.css
+++ b/style.css
@@ -86,3 +86,25 @@ h1, h2 {
 .nav-links span {
   color: #14e9b6;
 }
+
+/* Hero Section */
+.hero {
+  background-image: url('images/hero.jpg');
+  height: 480px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.hero-heading, .subheading {
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+}
+.hero-heading {
+  font-weight: bold;
+  font-size: 42px;
+}
+.subheading {
+  text-transform: uppercase;
+  font-size: 21px;
+}
