--- a/style.css
+++ b/style.css
@@ -94,15 +94,21 @@ h1, h2 {
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .hero-heading, .subheading {
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
+  display: flex;
 }
 .hero-heading {
   font-weight: bold;
   font-size: 42px;
+  padding-top: 15px;
 }
 .subheading {
   text-transform: uppercase;
