--- a/style.css
+++ b/style.css
@@ -114,3 +114,29 @@ h1, h2 {
   text-transform: uppercase;
   font-size: 21px;
 }
+.the-bod {
+  background-color: #14e9b6;
+}
+.the-abs {
+  width: 90%;
+  margin: 0 auto;
+  padding: 80px 0px 150px;
+}
+.content-header {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #021d2c;
+  font-weight: bold;
+  font-size: 27px;
+}
+.mono {
+  font-family: 'Roboto Condensed', monospace;
+  font-weight: 10px;
+  color: #021d2c;
+  line-height: 1.5;
+}
+.copy {
+  font-family: 'Georgia', serif;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #021d2c;
+}
