--- a/style.css
+++ b/style.css
@@ -122,6 +122,15 @@ h1, h2 {
   margin: 0 auto;
   padding: 80px 0px 150px;
 }
+.the-abs .content-header,
+.the-abs .mono,
+.the-abs .copy {
+  display: flex;
+
+}
+.flex-row {
+  display: flex;
+}
 .content-header {
   font-family: 'Roboto Condensed', sans-serif;
   color: #021d2c;
@@ -139,4 +148,16 @@ h1, h2 {
   font-size: 16px;
   line-height: 1.2;
   color: #021d2c;
+}
+.the-abs .content-header {
+  margin: 15px 0;
+}
+.the-abs .mono {
+  margin: 15px 0;
+}
+.flex-row .copy{
+  margin: 15px 30px;
+}
+.flex-row .copy:first-of-type {
+
 }
