--- a/style.css
+++ b/style.css
@@ -168,20 +168,52 @@ h1, h2 {
 	background: -ms-linear-gradient(-45deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
 	background: linear-gradient(135deg, rgba(20,233,183,1) 0%, rgba(10,216,227,1) 100%);
 	display: inline-block;
-	width: 40%;
+	width: 30%;
 	padding: 95px 40px 100px 60px;
+	vertical-align: top;
 }
 .objectives li {
 	list-style-type: initial;
-	font-size: 15px;
 	margin: 15px 15px 15px 0;
 }
 .objectives {
 	margin-left: 15px;
 }
 .sidebar p.mono {
-	margin: 25px 0 25px;
+	margin: 20px 0 25px;
 }
 .thirds {
 	margin-top: 5px;
+}
+.schedule  {
+	display: inline-block;
+	width: 50%;
+	padding: 90px 70px 80px;
+
+}
+.schedule .content-header {
+	margin: 20px 0 15px;
+}
+
+.small-header {
+	font-size: 21px;
+}
+
+.schedule .small-header {
+	margin: 40px 0 15px;
+}
+.schedule-block {
+	margin: 0 auto;
+	text-align: center;
+	padding: 40px 0;
+}
+.schedule-block .mono {
+	text-decoration-color: none;
+}
+.schedule-block .mono:hover {
+	text-decoration: underline;
+	color: #14b9b6;
+}
+.schedule-block span {
+	margin: 0 15px;
 }
