--- a/style.css
+++ b/style.css
@@ -217,3 +217,18 @@ h1, h2 {
 .schedule-block span {
 	margin: 0 15px;
 }
+
+/*Current Students */
+.current-students .mono {
+	width: 40%;
+}
+.img-flex {
+	display: flex;
+	flex-wrap: wrap;
+}
+.img-flex img{
+	display: flex;
+	width: 220px;
+	height: 220px;
+	margin: 5px;
+}
